[metadata]
name = sncolor
version = attr: sncolor.__version__
description = 'SN colour distribution fitting and plotting'
long_description = file: README.md
author = 'Madeleine Ginolin'
author_email = 'm.ginolin@ip2i.in2p3.fr'
#license = BSD 3-Clause License  # See https://choosealicense.com/
#license_file = LICENSE
url = 'https://https://github.com/mginolin/sncolor'

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    iminuit
    pandas